dapr-distributed-calendar/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /jaeger
            backend:
              service:
                name: simplest-query
                port:
                  number: 16686
